      pretty_print() function family. Controls terminal width auto-detection
      and automatic printing to stderr.
    - onmainwindow.cpp: don't let a potential terminal affect the help string
      shown in the GUI.
    - help.h: lower default splitting length to 100 characters.
    - onmainwindow.cpp: fix up pulse config file generation and
      PULSE_CLIENTCONFIG setting once more.

  [ Fernando Pedemonte ]
  * New upstream release (4.0.4.0):
    - onmainwindow.cpp: fix bad quoting when writing remote xinerama config file.
      Fixes: #797.

  [ René Genz ]
  * New upstream release (4.0.4.0):
    - {LICENSE,debian/copyright}: fix typo in URL of obviously-nice.de.
      Fixes: #811.

  [ Mike Gabriel ]
  * New upstream release (4.0.4.0):
    - onmainwindow.cpp: fix desktop sharing via session broker. Fixes: #584.

  [ Jason Alavaliant ]
  * New upstream release (4.0.4.0):
    - onmainwindow.cpp: handle %i and %c format flags in desktop files
      correctly: remove the %i flag and replace %c with the application name.
      Fixes: #827.

  [ Nicolas Husson ]
  * New upstream release (4.0.4.0):
    - src/{onmainwindow,sshmasterconnection}.cpp: enable use of SSH proxy
      configuration with x2goplugin. Fixes: #798.
      + v2: refactor patch, fix whitespace issues. (Mihai Moldovan)

 -- X2Go Release Manager <git-admin@x2go.org>  Thu, 19 Feb 2015 13:25:28 +0100

x2goclient (4.0.3.2-0x2go1) unstable; urgency=medium

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.3.2):
    - Fix placement of session folders in session card column. (Fixes: #681).
    - Send empty message in x2gohelper to stop AppStarting cursor. (Fixes: #616).
    - Fix multiple creations of modmap timer (OS_DARWIN).

  [ Mike Gabriel ]
  * New upstream release (4.0.3.2):
    - Add several info/error/debug log message while hunting down #702.
    - Use app.setQuitOnLastWindowClosed(false) for the X2Go Client QtApplication